--- a/app/view/cms/home/home.njk
+++ b/app/view/cms/home/home.njk
@@ -109,36 +109,36 @@
                 <div class="sp margin-top-20  margin-bottom-20">
                     <ul class="row look">
                         <li class="col-sm-3">
-                            <a href="javascript:;" src="http://p2w2xj7bx.bkt.clouddn.com/lvvri7CXn3AmMKwpRt-9RCZswMuU" class="video-src">
+                            <a href="javascript:;" src="http://image.dayuxiaoyu.com/lvvri7CXn3AmMKwpRt-9RCZswMuU" class="video-src">
                                  <em>
-                                     <img src="http://p2w2xj7bx.bkt.clouddn.com/FrDsa-geUWsxBEy2ese0mYwI-WlA" alt=""/>
+                                     <img src="http://image.dayuxiaoyu.com/FrDsa-geUWsxBEy2ese0mYwI-WlA" alt=""/>
                                      <img src="/public/images/kb.jpg" alt="" class="kb" />
                                  </em>
                              </a>
                              <p>希腊考察视频-比港</p>
                         </li>
                         <li class="col-sm-3">
-                            <a href="javascript:;" src="http://p2w2xj7bx.bkt.clouddn.com/lskE5kWVePGxsyC_Q6tRyRqV6RTV" class="video-src">
+                            <a href="javascript:;" src="http://image.dayuxiaoyu.com/lskE5kWVePGxsyC_Q6tRyRqV6RTV" class="video-src">
                                  <em>
-                                     <img src="http://p2w2xj7bx.bkt.clouddn.com/FlhEweAdSiZ6MJpjFuYMlzbRtGRC" alt=""/>
+                                     <img src="http://image.dayuxiaoyu.com/FlhEweAdSiZ6MJpjFuYMlzbRtGRC" alt=""/>
                                      <img src="/public/images/kb.jpg" alt="" class="kb" />
                                  </em>
                              </a>
                              <p>希腊考察视频</p>
                         </li>
                         <li class="col-sm-3">
-                            <a href="javascript:;" src="http://p2w2xj7bx.bkt.clouddn.com/llZvwQfZa3iOIbadup9mpYQv6o65" class="video-src">
+                            <a href="javascript:;" src="http://image.dayuxiaoyu.com/llZvwQfZa3iOIbadup9mpYQv6o65" class="video-src">
                                  <em>
-                                     <img src="http://p2w2xj7bx.bkt.clouddn.com/FrSnjkBornVxPNem474fBLRp_KDi" alt=""/>
+                                     <img src="http://image.dayuxiaoyu.com/FrSnjkBornVxPNem474fBLRp_KDi" alt=""/>
                                      <img src="/public/images/kb.jpg" alt="" class="kb" />
                                  </em>
                              </a>
                              <p>希腊考察视频</p>
                         </li>
                         <li class="col-sm-3">
-                            <a href="javascript:;" src="http://p2w2xj7bx.bkt.clouddn.com/lqU0NhtQzV_Ufy3sikFpmIk52CBZ" class="video-src">
+                            <a href="javascript:;" src="http://image.dayuxiaoyu.com/lqU0NhtQzV_Ufy3sikFpmIk52CBZ" class="video-src">
                                  <em>
-                                     <img src="http://p2w2xj7bx.bkt.clouddn.com/ForUg0xlmzpVfI3iJ71_lgE-eux-" alt=""/>
+                                     <img src="http://image.dayuxiaoyu.com/ForUg0xlmzpVfI3iJ71_lgE-eux-" alt=""/>
                                      <img src="/public/images/kb.jpg" alt="" class="kb" />
                                  </em>
                              </a>
