--- a/app/view/cms/home/home.njk
+++ b/app/view/cms/home/home.njk
@@ -258,12 +258,12 @@
                 <div class="col-sm-6"><img src="/public/images/bg4.jpg" class="img-responsive" alt=""/></div>
                 <div class="col-sm-6 ">
                     <div class="about-index">
-		<p>乐府诗《长歌行》中提到”乘风破浪会有时,直挂云帆济沧海。”海纳百川，有容乃大。大海的浩渺深邃是大鱼小鱼最自在的世界。</br>
-北京大鱼小鱼因私出入境服务有限公司以专业的团队、严谨的审核标准为中国高净值人群提供投资移民及相关服务，主要业务涵盖投资移民、海外置业、海外生子服务等。<br><br>
 
-北京大鱼小鱼因私出入境服务有限公司同时打造了自己的全新品牌—欧洲时代，致力于欧洲国家，西班牙、葡萄牙、塞浦路斯、希腊、马耳他等国的投资移民，严守8大项目审核标准，甄选投资价值突出的移民项目，为用户带来便捷、贴心的管家式投资移民服务，是"值得每个家托付"的品牌新主张。
+                    <p>乐府诗《长歌行》中提到”乘风破浪会有时,直挂云帆济沧海。”海纳百川，有容乃大。大海的浩渺深邃是大鱼小鱼最自在的世界。</br>
 
-                        </p>
+                    北京大鱼小鱼因私出入境服务有限公司以专业的团队、严谨的审核标准为中国高净值人群提供投资移民及相关服务，主要业务涵盖投资移民、海外置业、海外生子服务等。</br>
+
+                    北京大鱼小鱼因私出入境服务有限公司同时打造了自己的全新品牌—欧洲时代，致力于欧洲国家，西班牙、葡萄牙、塞浦路斯、希腊、马耳他等国的投资移民，严守8大项目审核标准，甄选投资价值突出的移民项目，为用户带来便捷、贴心的管家式投资移民服务，是"值得每个家托付"的品牌新主张。</p>
                         <p><img src="/public/images/bg5.jpg" width="394" height="124" alt=""/></p>
                     </div>
                 </div>
